// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThreadView component should render a ThreadView without the TopPostForm 1`] = `
<div>
  <DumbTopPostFormContainer
    draftSuccessMsgId={null}
    draftable={false}
    filter={
      <Connect(DumbThreadPostsFilterMenu)
        stickyOffset={60}
        stickyTopPosition={200}
      />
    }
    fullscreen={false}
    hashtagFilter={<Connect(withRouter(Apollo(DumbThreadHashtagsFilter))) />}
    instructionLabelMsgId="debate.thread.startDiscussion"
    isColumnViewInline={false}
    messageColumns={Array []}
    refetchIdea={[MockFunction]}
    showForm={false}
    topPostsCount={0}
  />
  <Grid
    bsClass="container"
    className="background-grey"
    componentClass="div"
    fluid={true}
  >
    <div
      className="max-container background-grey"
      id="thread-view"
    >
      <div
        className="content-section"
      >
        <Tree
          InnerComponent={[Function]}
          InnerComponentFolded={[Function]}
          SeparatorComponent={[Function]}
          contentLocaleMapping={null}
          data={Array []}
          identifier="foo"
          initialRowIndex={0}
          lang="fr"
          noRowsRenderer={null}
          phaseId="FooID"
          sharedProps={
            Object {
              "onHashtagClick": undefined,
              "postsDisplayPolicy": Object {
                "displayMode": "full",
                "id": "display-full",
                "labelMsgId": "debate.thread.postsDisplay.full",
              },
            }
          }
        />
      </div>
    </div>
  </Grid>
</div>
`;

exports[`ThreadView component should render a TopPostForm 1`] = `
<div>
  <DumbTopPostFormContainer
    draftSuccessMsgId={null}
    draftable={false}
    filter={
      <Connect(DumbThreadPostsFilterMenu)
        stickyOffset={60}
        stickyTopPosition={200}
      />
    }
    fullscreen={false}
    hashtagFilter={<Connect(withRouter(Apollo(DumbThreadHashtagsFilter))) />}
    instructionLabelMsgId="debate.thread.startDiscussion"
    isColumnViewInline={false}
    messageColumns={Array []}
    refetchIdea={[MockFunction]}
    showForm={true}
    topPostsCount={0}
  />
  <Grid
    bsClass="container"
    className="background-grey"
    componentClass="div"
    fluid={true}
  >
    <div
      className="max-container background-grey"
      id="thread-view"
    >
      <div
        className="content-section"
      >
        <Tree
          InnerComponent={[Function]}
          InnerComponentFolded={[Function]}
          SeparatorComponent={[Function]}
          contentLocaleMapping={null}
          data={Array []}
          identifier="foo"
          initialRowIndex={0}
          lang="fr"
          noRowsRenderer={null}
          phaseId="FooID"
          sharedProps={
            Object {
              "onHashtagClick": undefined,
              "postsDisplayPolicy": Object {
                "displayMode": "full",
                "id": "display-full",
                "labelMsgId": "debate.thread.postsDisplay.full",
              },
            }
          }
        />
      </div>
    </div>
  </Grid>
</div>
`;
